[package]
name = "nvps"
version = "0.1.0"
edition = "2021"
authors = ["Ondřej Staněk <stanekondrej@skiff.com>"]
description = "a simple command line tool to search for neovim plugins"
repository = "https://github.com/stanekondrej/nvps"
license = "MIT"
keywords = ["neovim", "nvim", "plugin", "search", "plugins"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.2", features = ["blocking"] }
